--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "bugs": {
     "url": "https://github.com/funnystyle/noom/issues"
   },
-  "homepage": "https://github.com/funnystyle/noom#readme"
+  "homepage": "https://github.com/funnystyle/noom#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
