--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "noom",
   "version": "1.0.0",
   "description": "Zoom Clone using NodeJS, WebRTC and Websockets.",
+  "scripts": {
+    "dev": "nodemon"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/funnystyle/noom.git"
